# plugin_architecture_practice

./: CMakeLists.txt  README.md
applications/: CMakeLists.txt  main.cpp
include/: plugin_interface.h
include/plugin_1/: plugin_1.h
include/plugin_2/: plugin_2.h
src/: CMakeLists.txt
src/plugin_1/: CMakeLists.txt  plugin_1.cpp
src/plugin_2/: CMakeLists.txt  plugin_2.cpp
